[package]
name = "my-socket-io-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug_ws = []

[dependencies]
my-http-server = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-http-server.git" }
my-http-server-web-sockets = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-http-server-web-sockets.git" }
socket-io-utils = { tag = "0.1.0", git = "https://github.com/MyJetTools/socket-io-utils.git" }
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-json = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-json.git" }
tokio = { version = "*", features = ["full"] }
async-trait = "*"
hyper = { version = "*", features = ["full"] }
hyper-tungstenite = "*"
futures = "*"
uuid = { version = "*", features = ["serde", "v4"] }
